--- a/Slides/lecture03.tex
+++ b/Slides/lecture03.tex
@@ -1,6 +1,13 @@
 \input{preamble}
 
-\title{First}
+\title{External Validity}
+
+% external validity
+% sample-related
+% suto framework
+%  pretreatment: Do unit history or broader context influence our results? We can measure to see if people have been pretreated, but sometimes we can't do that or can't know in advance
+%  behaviors/beavioral intentions
+
 
 \date[]{}
 
@@ -10,17 +17,759 @@
 
 \frame{\tableofcontents}
 
-\section{Substantive Material}
+
+
+
+
+
+\section{External Validity}
+\frame{\tableofcontents[currentsection]}
 
 \frame{
 
+\frametitle{Think--Pair--Share}
+
+Consider the following question:
+
+What makes an experiment (or any research study) generalizable? What does it mean for a study's results to ``generalize''?
+
+\begin{enumerate}
+\item Write or think to yourself for 90 seconds
+\item Then, discuss with the person next to you
+\end{enumerate}
+
+}
+
+
+\frame{
+\frametitle{``The Gold Standard''}
+
+\begin{quote}\small
+a population-based experiment uses survey sampling methods to produce a collection of experimental subjects that is representative of the target population of interest for a particular theory \dots the population represented by the sample should be representative of the population to which the researcher intends to extend his or her findings. In population-based experiments, experimental subjects are randomly assigned to conditions by the researcher
+\end{quote}
+
+{\footnotesize p2. from Mutz, Diana. 2011. \textit{Popuation-Based Survey Experiments}. Princeton University Press.\par}
+
+}
+
+
+\frame{
+	\frametitle{Surveys Start with an Inference Population}
+	\begin{itemize}\itemsep1em
+		\item We want to speak to a population
+		\item But what population is it?
+			\begin{itemize}
+			\item<2-> A national population?
+			\item<3-> Adults in Western, industrialized democracies?
+			\item<4-> All human beings?
+			\end{itemize}
+		\item<5-> This is rarely specified, but is important when we think about whether a sample is appropriate
+	\end{itemize}
+}
+
+
+
+
+
+
+\frame{
+	\frametitle{A Hypothetical Census}
+
+	\begin{itemize}\itemsep2em
+		\item Advantages
+			\begin{itemize}
+				\item<2-> Perfectly representative
+				\item<2-> Sample statistics are population parameters
+			\end{itemize}
+		\item Disadvantages
+			\begin{itemize}
+				\item<3-> Costs
+				\item<3-> Feasibility
+				\item<3-> Need
+			\end{itemize}		
+	\end{itemize}
+}
+
+
+\frame{\frametitle{So, instead we sample!}}
+
+
+\frame{
+	\frametitle{Sampling Frames}
+	\begin{itemize}\itemsep1em
+		\item Enumeration (listing) of all units eligible for sample selection
+		\item Random sample from that list
+		\item<2-> Building a sampling frame
+			\begin{itemize}
+			\item Combine existing lists
+			\item Canvass/enumerate from scratch
+			\end{itemize}
+		\item<3-> Concern about coverage: Does frame match population?
+	\end{itemize}
+}
+
+
+\frame{
+	\frametitle{Sample Estimates from an SRS}
+	\begin{itemize}\itemsep1em
+		\item Each unit in frame has equal probability of selection
+		\item Sample statistics are unweighted
+		\item Variances are easy to calculate
+		\item Easy to calculate sample size need for a particular variance
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Sample mean}
+	\begin{equation}
+	\bar{y} = \frac{1}{n}\sum_{i=1}^{n}y_i
+	\end{equation}
+	where $y_i = $ value for a unit, and\\
+	$n = $ sample size
+	
+	\begin{equation}
+	SE_{\bar{y}} = \sqrt{(1-f)\frac{s^2}{n}}
+	\end{equation}
+	where $f = $ proportion of population sampled,\\
+	$s^2 = $ sample element variance, and\\
+	$n = $ sample size
+}
+
+\frame{
+	\frametitle{Estimating sample size}
+
+\small
+
+	If all we cared about was a single proportion:
+
+	\begin{equation}
+		Var(p) = (1-f)\frac{p(1-p)}{n-1}
+	\end{equation}
+	
+	Given a large population:	
+	\begin{equation}
+		Var(p) = \frac{p(1-p)}{n-1}
+	\end{equation}
+	
+	Need to solve the above for $n$.
+	\begin{equation}
+	\only<2->{n = \frac{p(1-p)}{v(p)} = \frac{p(1-p)}{SE^2}}
+	\end{equation}
+}
+
+\frame{
+	\frametitle{Estimating sample size}
+    Determining sample size requires:
+    	\begin{itemize}
+    		\item A possible value of $p$
+    		\item A desired precision (standard error)
+    	\end{itemize}
+	\vspace{1em}
+	If support for each coalition is evenly matched ($p = 0.5$):
+	\begin{equation}
+	n = \frac{0.5(1-0.5)}{SE^2} = \frac{0.25}{SE^2}
+	\end{equation}
+}
+
+\frame{
+	\frametitle{Estimating sample size}
+	What precision (margin of error) do we want?
+	\begin{itemize}
+		\item +/- 2 percentage points: $SE = 0.01$
+			\begin{equation}
+			n = \frac{0.25}{0.01^2} = \frac{0.25}{0.0001} = 2500
+			\end{equation}
+		\item<2-> +/- 5 percentage points: $SE = 0.025$
+			\begin{equation}
+			n = \frac{0.25}{0.000625} = 400
+			\end{equation}
+		\item<3-> +/- 0.5 percentage points: $SE = 0.0025$
+			\begin{equation}
+			n = \frac{0.25}{0.00000625} = 40,000
+			\end{equation}
+	\end{itemize}
+}
+
+
+
+\frame{
+
+\frametitle{Sampling Considerations\dots}
+
 \begin{itemize}\itemsep1em
+\item<2-> More complex designs possible, all based on each unit having a \textit{known, non-zero} probability of being sampled
+	\begin{itemize}
+	\item Stratified sampling can produce lower variances
+	\end{itemize}
+\item<3-> Random sampling ensures that samples are, \textit{in expectation}, representative of the population \textit{in all respects}
+	\begin{itemize}
+	\item Demographics
+	\item Psychological traits
+	\item Covariances
+	\item Potential outcomes
+	\end{itemize}
+\end{itemize}
+}
 
-\item
 
+\frame{}
+
+\bgroup
+\setbeamercolor{background canvas}{bg=blue!20!white}
+\setbeamertemplate{navigation symbols}{}
+\begin{frame}[plain]{}
+\frametitle{Representativeness}
+
+What does it mean for a sample to be representative?
+
+\begin{itemize}
+	\item<2-> Census
+	\item<3-> SRS (or more complex) design
+	\item<4-> Quota sampling (common prior to the 1940s)
+	\item<5-> Demographics match population
+	\item<6-> Others?
+\end{itemize}
+
+\vspace{1em}
+
+\onslide<7->{Which of these matter?}
+\end{frame}
+\egroup
+
+% what kinds of representativeness do we care about?
+
+
+
+\frame{
+
+\frametitle{{\large Combining Probability Sampling and\\ Experimental Design}}
+
+\begin{itemize}\itemsep1em
+\item Sample is representative of population in every respect (in expectation)
+\item Sample Average Treatment Effect (SATE) is the average of the sample's individual-level treatment effects
+	\begin{itemize}
+	\item Unbiased estimate of PATE
+	\item Not necessarily any unit's individual treatment effect
+	\item Blocking might reduce variance
+	\end{itemize}
+\item Says nothing about effect heterogeneity
+	\begin{itemize}
+	\item Design is optimized for estimating SATE
+	\end{itemize}
+\end{itemize}
+}
+
+
+
+\frame{
+
+Credibility of all of this is based on \textit{design} only
+
+\vspace{1em}
+
+\onslide<2->{Sampling aspect only works in a world of perfect coverage and no response bias}
+
+}
+
+\frame<1-3>[label=myview]{
+\frametitle{My View}
+
+100\% design-based inference does not exist
+
+\vspace{1em}
+
+\begin{itemize}\itemsep0.75em
+\item<2-> All survey designs involve reweighting adjustments
+\item<3-> Representativeness is a more complex issue than demographic comparisons
+\item<4-> Randomization gives us clear causal inference about a \textit{local} effect
+	\begin{itemize}
+	\item I would always sacrifice representativeness for clarity of causal inference
+	\item Focus on figuring out the nature of the \textit{localness}
+	\end{itemize}
+\end{itemize}
+}
+
+
+
+
+\frame{
+\frametitle{My Own Research}
+\footnotesize
+\begin{tabular}{ l r r r r r r r} \toprule\toprule
+   & {\bf GfK} & {\bf Poll} & {\bf Student} & {\bf Staff}  & {\bf MTurk} & {\bf Ads} & {\bf ANES}\\ \midrule
+{\bf Dem. (\%)}      & 51.3 & 86.1 & 75.7 & 66.4 & 62.1 & 72.1 & 46.2 \\  
+{\bf Rep. (\%)}    & 46.0 &   7.7 & 17.8 & 16.4 & 20.3 &  14.7 & 39.3\\ 
+{\bf Lib. (\%)}          & 27.8 & 75.4 & 68.5 & 62.7 & 60.4 & 66.2& 23.8\\
+{\bf Con. (\%)} & 35.3 & 9.4 & 14.7 & 19.8 & 19.1 & 17.7& 36.1\\
+{\bf Fem. (\%)}         & 51.1 & 60.8 & 56.4 & 50.8 & 41.7 & 65.3 & 51.9 \\
+{\bf White (\%)}           & 77.9 & 67.6 & 62.9 & 60.2 & 76.0 & 53.8 & 80.4\\
+{\bf Age}          & 49.4 & 40-49 & 18-24 & 25-34 & 25-34 & 25-34& 50-54 \\ 
+{\bf Interest}       & 2.8 & 3.5 & 3.2 & 2.8 & 2.7 & 3.0 & 3.0\\ \midrule
+{\bf N}                         & 593 & 741 & 299 & 128 & 1024 & 80&  -- \\ \bottomrule\bottomrule
+\end{tabular}
+
+\vspace{1em}
+
+{\footnotesize Mullinix et al. In press. ``The Generalizability of Survey Experiments.'' \textit{Journal of Experimental Political Science}.}
+}
+
+\frame{
+\begin{center}
+\includegraphics[height=.95\textheight]{images/mullinix3}
+\end{center}
+}
+
+
+\frame{
+\begin{center}
+\includegraphics[width=1.1\textheight, trim=0in 0in 0in 0.5in, clip]{images/mullinix1}
+\end{center}
+}
+
+\againframe<3-4>{myview}
+
+\frame{
+\frametitle{SUTO Framework}
+\begin{itemize}\itemsep1em
+\item Cronbach (1986) talks about generalizability in terms of UTO
+\item Shadish, Cook, and Campbell (2001) speak similarly of:
+	\begin{itemize}
+	\item \textbf{S}ettings
+	\item \textbf{U}nits
+	\item \textbf{T}reatments
+	\item \textbf{O}utcomes
+	\end{itemize}
+\item External validity depends on all of these things
+\end{itemize}
+}
+
+
+\frame{
+\begin{columns}[t]
+\begin{column}{0.5\textwidth}
+	\begin{block}{Population}
+		\begin{itemize}
+		\item Setting
+		\item Units
+		\item Treatments
+		\item Outcomes
+		\end{itemize}
+	\end{block}
+\end{column}
+\begin{column}{0.5\textwidth}
+	\begin{block}{Your Study}
+		\begin{itemize}
+		\item Setting
+		\item Units
+		\item Treatments
+		\item Outcomes
+		\end{itemize}
+	\end{block}
+\end{column}
+\end{columns}
+
+\vspace{1em}
+
+\only<2->{In your study, how do these correspond?\\}
+\only<3->{\hspace{5.7em} how do these differ?\\}
+\only<4->{\hspace{5.7em} do these differences matter?\\}
+
+}
+
+
+\frame{
+\frametitle{Common Differences}
+\begin{itemize}\itemsep1em
+\item Most common thing to focus on is demographic representativeness
+	\begin{itemize}
+	\item Sears (1986): ``students aren't real people''
+	\item \href{http://www.slate.com/articles/health_and_science/science/2013/05/weird_psychology_social_science_researchers_rely_too_much_on_western_college.html}{Western, educated, industrialized, rich, democratic (WEIRD) psychology participants}
+	\end{itemize}
+\item<2-> But do those characteristics actually matter?
+\item<3-> Shadish, Cook, and Campbell tell us to think about:
+	\begin{itemize}
+	\item Surface similarities
+	\item Ruling out irrelevancies
+	\item Making discriminations
+	\item Interpolation/extrapolation
+	\end{itemize}
+\end{itemize}
+}
+
+
+\frame{
+\frametitle{Focus on effect heterogeneity}
+\begin{itemize}\itemsep1em
+\item Think about and make an evidence-based argument for why you think there are (or are not) heterogeneous effects
+\item<2-> If you think there is heterogeneity, then we probably do not care about the SATE anyway
+	\begin{itemize}
+	\item Focus on CATE instead
+	\item $E[Y_{1i} | X = 1, Z=z] - E[Y_{0i} | X = 0, Z=z]$
+	\end{itemize}
+\item<3-> Two formal analytic strategies
+	\begin{itemize}
+	\item Regression with large number of interactions
+	\item Bayesian Additive Regression Trees
+	\end{itemize}
+\item<4-> But remember: you have to convince reviewers!
+\end{itemize}
+}
+
+
+
+\frame{
+\frametitle{BART}
+\begin{itemize}\itemsep1em
+\item Estimate \textit{conditional average treatment effects}
+\item BART is essentially an ensemble machine learning method
+\item Iteratively split a sample into more and more homogeneous groups until some threshold is reached using binary (cutpoint) decisions
+\item Repeat this a bunch of times, aggregating across results
+\end{itemize}
+}
+
+\frame{
+\begin{center}
+\includegraphics[width=\textwidth]{images/greenkern1}
+\end{center}
+{\footnotesize Green and Kern. 2012. ``Modeling Heterogeneous Treatment Effects in Survey Experiments with Bayesian Additive Regression Trees.'' \textit{Public Opinion Quarterly}.\par}
+}
+
+\frame{
+\begin{center}
+\includegraphics[height=.8\textheight]{images/greenkern2}
+\end{center}
+{\footnotesize Green and Kern. 2012. ``Modeling Heterogeneous Treatment Effects in Survey Experiments with Bayesian Additive Regression Trees.'' \textit{Public Opinion Quarterly}.\par}
+}
+
+
+\frame{
+
+\frametitle{Stratification/Blocking}
+
+As soon as we care about heterogeneous effects, it makes sense to stratify and block on factors that might moderate the treatment effect.
+
+\vspace{1em}
+
+\onslide<2->{As soon as we identify all sources of heterogeneity, it doesn't matter what sample we use because effects are \textit{by definition} homogeneous within such strata.}
+
+\vspace{1em}
+
+\onslide<3->{But, we never know when we've reached that point!}
+
+}
+
+
+
+\frame{
+
+If we acknowledge and start thinking about effect heterogeneity, does this mean we can use any convenient group of participants as if they were probability samples?
+
+\vspace{1em}
+
+No. Of course not.
+}
+
+
+% defining your convenience sample
+\frame{
+	\frametitle{Not All Convenience Samples Are Alike}
+	\begin{itemize}\itemsep1em
+		\item<1-> Different types:
+			\begin{itemize}
+				\item<2-> Passive/opt-in/``river sampling''
+				\item<3-> Sample of convenience (not a sample per se)
+					\begin{itemize}
+					\item Email list
+					\item Snowball sample
+					\item Respondent-driven Sampling
+					\item Students
+					\item Crowdsourcing
+					\end{itemize}
+			\end{itemize}
+		\item<4-> Differ in numerous ways
+			\begin{itemize}
+			\item Cost
+			\item ``Experience''
+			\item Attentiveness
+			\item Demographics
+			\end{itemize}
+	\end{itemize}
+}
+
+\frame{
+\frametitle{Costs per participant}
+
+From one of my studies:\\
+
+\vspace{1em}
+
+\centering
+\begin{tabular}{l r r r}
+Sample	& Cost	& n	& Cost/participant\\ \midrule
+National	& \$13200	& 593	& \$22.26\\
+Exit Poll	& \$3000	& 741	& \$4.05\\
+Students	& \$0	& 299	& \$0\\
+Staff		& \$1280	& 128	& \$10.00\\
+MTurk	& \$550	& 1024	& \$0.54\\
+Ads		& \$636	& 80		& \$7.95\\
+\bottomrule
+\end{tabular}
+}
+
+\frame{
+\frametitle{Participant Experience}
+
+\begin{itemize}\itemsep1em
+\item A lot of growing concern about experience
+\item Larger literature on ``panel conditioning''
+	\begin{itemize}
+	\item Inconclusive evidence
+	\end{itemize}
+\item<3-> Some numbers:
+	\begin{itemize}
+	\item<3-> MTurk workers are doing 100+ studies per month
+	\item<4-> Numbers are the same for YouGov panelists
+	\end{itemize}
 \end{itemize}
 
 }
+
+
+
+% reweighting; pscore methods
+\frame{
+\frametitle{Reweighting}
+\begin{itemize}\itemsep1em
+\item It may be possible to \textit{reweight} convenience sample data to match a population
+\item Any method for this is ``model-based'' (rather than ``design-based'')
+\item Not widely used or evaluated (yet)
+\item All techniques build on the idea of stratification
+\end{itemize}
+}
+
+
+\frame{
+	\frametitle{Overview of Stratification}
+	\begin{enumerate}\itemsep0.5em
+		\item Define population
+		\item Construct a sampling frame
+		\item Identify variables we already know about units in the sampling frame
+		\item Stratify sampling frame based on these characteristics
+		\item Collect an SRS (of some size) within each stratum
+		\item Aggregate our results
+	\end{enumerate}
+}
+
+\frame{
+	\frametitle{Estimates from a stratified sample}
+	\begin{itemize}\itemsep0.5em
+		\item Within-strata estimates are calculated just like an SRS
+		\item Within-strata variances are calculated just like an SRS
+		\vspace{1em}
+		\item Sample-level estimates are weighted averages of stratum-specific estimates
+		\item Sample-level variances are weighted averages of strataum-specific variances
+	\end{itemize}
+}
+
+
+\frame{
+	\frametitle{Post-Stratification}
+	\begin{itemize}\itemsep1em
+		\item Used to correct for nonresponse, coverage errors, and sampling errors
+		\item<2-> Reweight sample data to match population distributions
+			\begin{itemize}
+				\item Divide sample and population into strata
+				\item Weight units in each stratum so that the weighted sample stratum contains the same proportion of units as the population stratum does
+			\end{itemize}
+		\item<3-> There are numerous other related techniques
+	\end{itemize}
+}
+
+\frame{
+	\frametitle{Post-Stratification: Example}
+	\begin{itemize}\itemsep1em
+		\item Imagine our sample ends up skewed on immigration status and gender relative to the population\\
+		\vspace{1em}
+		\small
+		\begin{tabular}{lrrlr}
+			\hline
+			Group             & Pop. & Sample & Rep.                &              Weight \\ \hline
+			Native-born, Female    &  .45 &     .5 & \onslide<2->{Over}  & \onslide<3->{0.900} \\
+			Native-born, Male      &  .45 &     .4 & \onslide<2->{Under} & \onslide<4->{1.125} \\
+			Immigrant, Female &  .05 &    .07 & \onslide<2->{Over}  & \onslide<4->{0.714} \\
+			Immigrant, Male   &  .05 &    .03 & \onslide<2->{Under} & \onslide<4->{1.667}\\  \hline
+		\end{tabular}
+		\item PS weight is just $w_{ps} = N_l / n_l$
+	\end{itemize}
+}
+
+
+\frame{
+	\frametitle{Post-Stratification}
+	\begin{itemize}\itemsep1em
+		\item This is the basis for inference in non-probability samples
+		\begin{itemize}
+			\item \textit{Demographic} representativeness
+		\end{itemize}
+		\item Online panels will reweight sample based on age, sex, education, etc.
+		\item Purely design-based surveys are increasingly rare
+	\end{itemize}
+}
+
+
+\frame{
+\frametitle{The Xbox Study}
+
+\begin{center}
+\includegraphics[width=\textwidth]{images/wangetal2}
+\end{center}
+
+{\footnotesize Wang et al. 2015. ``Forecasting elections with non-representative polls.'' \textit{International Journal of Forecasting}.\par}
+
+}
+
+
+\frame{
+\frametitle{The Xbox Study}
+
+\begin{center}
+\includegraphics[width=\textwidth]{images/wangetal1}
+\end{center}
+
+\vspace{1em}
+
+{\footnotesize Wang et al. 2015. ``Forecasting elections with non-representative polls.'' \textit{International Journal of Forecasting}.\par}
+
+}
+
+
+
+\frame{
+\begin{center}
+\includegraphics[width=.85\textwidth]{images/mullinix1}
+\end{center}
+\vspace{0.5em}
+{\footnotesize Mullinix et al. In press. ``The Generalizability of Survey Experiments.'' \textit{Journal of Experimental Political Science}.\par}
+}
+
+\frame{
+\begin{center}
+\includegraphics[width=.8\textheight]{images/mullinix2}
+\end{center}
+}
+
+
+
+\frame{
+\frametitle{Propensity Score Approach}
+\begin{enumerate}
+\item Define a target population to which sample inference is intended to generalize
+\item Estimate a propensity score model
+	\begin{itemize}
+	\item Pool experimental samples and target population units
+	\item Predict membership of all target and sample units in the experimental sample
+	\end{itemize}
+\item Using fitted logits, divide the population and sample into strata
+	\begin{itemize}
+	\item Number of strata is commonly 5 (Cochran, 1968)
+	\end{itemize}
+\item Estimate stratum-specific ATE
+\item Calculate weighted average of stratum-level estimates
+\end{enumerate}
+}
+
+
+\frame{
+\frametitle{Propensity Score Approach}
+
+Target population average treatment effect:
+\begin{equation}
+\sum_{v=1}^{5} p(v)T(v)
+\end{equation}
+where $p(v)$ is the proportion of the target population in a given stratum, $v$, and $T(v)$ is the estimated effect from stratum $v$ of the experimental sample
+}
+
+
+\frame{
+\frametitle{Propensity Score Approach}
+
+Effect variance:
+\begin{equation}
+\sum_{v=1}^{5} p(v)^2 V(v),
+\end{equation}
+where $V(v)$ is the variance of the estimated experimental sample effect for stratum $v$
+}
+
+
+
+\frame{
+\frametitle{Propensity Score Subclassification Estimator}
+\begin{columns}
+\column{\dimexpr\paperwidth-15pt}
+\scriptsize
+\begin{tabular}{rrrrrrrrr} \toprule
+& \multicolumn{2}{c}{Weights} & \multicolumn{6}{c}{Estimates}\\
+Stratum & Nat'l & Sample & Loan & DREAM (Pro) & DREAM (Con) & Rally (All) \\% & Rally (Distant) & Rally (Local) \\ 
+  \midrule
+  1 & 0.20 & 0.83 & 0.94 (0.08) & 0.06 (0.11) & -0.22 (0.12) & 0.74 (0.10) \\% & 0.77 (0.15) & 0.72 (0.15) \\ 
+  2 & 0.20 & 0.11 & 0.99 (0.26) & 0.22 (0.37) & -0.28 (0.36) & 0.77 (0.29) \\% & 0.85 (0.39) & 0.70 (0.42) \\ 
+  3 & 0.20 & 0.04 & 1.28 (0.43) & -0.61 (0.58) & -1.76 (0.54) & 1.00 (0.45) \\% & 0.75 (0.64) & 1.26 (0.64) \\ 
+  4 & 0.20 & 0.01 & 1.99 (0.73) & 0.29 (1.12) & 0.56 (0.89) & 1.44 (0.79) \\% & 3.13 (1.95) & 1.54 (0.63) \\ 
+  5 & 0.20 & 0.00 &  &  &  &  &  &  \\ \midrule
+  Sample & - & - & 1.04 (0.30) & -0.01 (0.44) & -0.34 (0.38) & 0.79 (0.33) \\% & 1.05 (0.60) & 0.86 (0.37) \\ 
+  Nat'l & - & - & 1.14 (0.18) & 0.02 (0.22) & -0.94 (0.23) & 0.94 (0.19) \\% & 1.01 (0.26) & 0.93 (0.27) \\ 
+   \bottomrule
+\end{tabular}
+\end{columns}
+}
+
+
+\frame{
+\textbf{So does reweighting solve everything forever?}
+
+\begin{itemize}\itemsep1em
+\item<2-> Need well-defined target population
+	\begin{itemize}
+	\item and detailed covariate data
+	\item and large stratum sizes
+	\end{itemize}
+\item<3-> Purely model-based, so only as good as the model
+	\begin{itemize}
+	\item What unobservables might be hiding bias?
+	\item What reweighting might worse bias?
+	\end{itemize}
+\item<4-> Non-coverage is a potentially huge problem
+\item<5-> Not well-tested on experimental data
+\end{itemize}
+
+}
+
+
+% eligibility; duplication; recontacts
+\frame{
+\frametitle{My Advice}
+\begin{itemize}\itemsep1em
+\item Only work with enumerated populations
+	\begin{itemize}
+	\item Each unit is uniquely identifiable
+	\end{itemize}
+\item<2-> Without this, you risk many things:
+	\begin{itemize}
+	\item Ambiguous eligibility
+	\item Retakes, treatment crossover
+	\item No way to evaluate response rates/bias
+	\end{itemize}
+\item<3-> Know something about your sample
+	\begin{itemize}
+	\item How does it differ from your target of inference?
+	\item What theories or evidence would suggest those differences should matter?
+	\item What can you do to adjust or control for those \textit{consequential} differences?
+	\end{itemize}
+\end{itemize}
+}
+
+
+
 
 
 \appendix
