--- a/Slides/lecture01.tex
+++ b/Slides/lecture01.tex
@@ -130,6 +130,17 @@
 \frame{\tableofcontents[currentsection]}
 
 
+\frame{
+
+\frametitle{Course Materials}
+
+\begin{center}
+All material for the course is available at:\\
+
+\url{http://www.thomasleeper.com/surveyexpcourse}
+\end{center}
+
+}
 
 \frame{
 
@@ -778,6 +789,24 @@ $s = \sqrt{\frac{(n_1 - 1)s_1^2 + (n_0 - 1)s_0^2}{n_1 + n_0 - 2}}$
 }
 
 
+\frame{
+
+\frametitle{Aside: Complex Designs}
+
+\begin{itemize}
+\item An experiment can have any number of conditions
+	\begin{itemize}
+	\item Up to the limits of sample size
+	\item More than 8--10 conditions is typically unwieldy
+	\end{itemize}
+\item Typically analyze complex designs using ANOVA or regression, but we are still ultimately interested in pairwise comparisons to estimates SATEs
+	\begin{itemize}
+	\item Treatment--treatment, or treatment-control
+	\item Without control group, we don't know which treatment(s) affected the outcome
+	\end{itemize}
+\end{itemize}
+
+}
 
 
 \frame{}
@@ -830,7 +859,7 @@ $s = \sqrt{\frac{(n_1 - 1)s_1^2 + (n_0 - 1)s_0^2}{n_1 + n_0 - 2}}$
 	\begin{itemize}
 	\item \url{http://tessexperiments.org}
 	\end{itemize}
-\item Pick two studies from TESS and writeupthe details from the worksheet
+\item Pick two studies from TESS
 \item We will share them in class tomorrow
 \end{itemize}
 
