--- a/Slides/lecture02.tex
+++ b/Slides/lecture02.tex
@@ -22,7 +22,7 @@ With a partner, discuss 1--2 of your TESS examples
 \item What was interesting or surprising about the designs?
 \end{itemize}
 
-Take about 4 minutes.
+Take about 4--6 minutes.
 
 }
 
@@ -104,10 +104,8 @@ E.g., we can design an experiment where some citizens are invited to deliberate 
 \begin{itemize}
 \item From theory, we derive testable hypotheses
 \item Hypotheses are expectations about differences in outcomes across levels of a putatively causal variable
+\item Manipulations are developed to create variation in that causal variable
 \end{itemize}
-
-
-% ACTIVITY
 
 }
 
@@ -127,6 +125,84 @@ E.g., we can design an experiment where some citizens are invited to deliberate 
 \end{itemize}
 
 }
+
+
+\frame{
+
+\frametitle{Example: Presence/Absence}
+
+\begin{itemize}
+\item RQ: How do campaign advertisements affect citizens' vote choices?
+\item Theory: Negative campaigning reduces support for the party described negatively.
+\item Hypothesis: Exposure to a negative advertisement criticizing a party reduces support for that party.
+\item Manipulation:
+	\begin{itemize}\small 
+	\item Control group receives no advertisement. 
+	\item Treatment group watches a video containing a negative ad describing a party.
+	\end{itemize}
+\end{itemize}
+
+}
+
+
+\frame{
+
+\frametitle{Example: Levels/doses}
+
+\begin{itemize}
+\item RQ: How do campaign advertisements affect citizens' vote choices?
+\item Theory: Negative campaigning reduces support for the party described negatively.
+\item Hypothesis: Exposure to higher levels of negative advertising criticizing a party reduces support for that party.
+\item Manipulation:
+	\begin{itemize}\small 
+	\item Control group receives no advertisement. 
+	\item Treatment group 1 watches a video containing 1 negative ad describing a party.
+	\item Treatment group 2 watches a video containing 2 negative ads describing a party.
+	\item Treatment group 3 watches a video containing 3 negative ads describing a party.
+	\item etc.
+	\end{itemize}
+\end{itemize}
+
+}
+
+
+\frame{
+
+\frametitle{Example: Qualitative variation}
+
+\begin{itemize}
+\item RQ: How do campaign advertisements affect citizens' vote choices?
+\item Theory: Negative campaigning reduces support for the party described negatively.
+\item Hypothesis: Exposure to a negative advertisement criticizing a party reduces support for that party, while a positive advertisement has no effect.
+\item Manipulation:
+	\begin{itemize}\small 
+	\item Control group receives no advertisement. 
+	\item Negative treatment group watches a video containing a negative ad describing a party.
+	\item Positive treatment group watches a video containing a positive ad describing a party.
+	\end{itemize}
+\end{itemize}
+
+}
+
+\questions
+
+\frame{
+
+\frametitle{Activity!}
+
+\begin{itemize}
+\item Let's try to develop examples of each type of manipulation
+	\begin{itemize}
+	\item presence/absence
+	\item levels/doses
+	\item qualitative variations
+	\end{itemize}
+\item<2-> Theory: 
+\item<3-> Theory: emotional responses to products affect purchasing behavior.
+\end{itemize}
+
+}
+
 
 
 % Talk about protocol and preregistration
@@ -167,7 +243,7 @@ It contains details of:
 \item Implementation
 \item Analysis
 \end{enumerate}
-\item Report back in about 7 minutes
+\item Report back in about 4 minutes
 \end{itemize}
 
 }
@@ -196,19 +272,42 @@ It contains details of:
 
 \frame{
 
-\frametitle{``Framing'' Experiments}
+\frametitle{``Framing'' or ``Priming'' Experiments}
 
-\begin{itemize}
-\item Example: Schuldt et al. ```Global Warming' or `Climate Change'? Whether the Planet is Warming Depends on Question Wording.''
+Example: Schuldt et al. ```Global Warming' or `Climate Change'? Whether the Planet is Warming Depends on Question Wording.''
 
-\end{itemize}
+\vspace{1em}
+
+What's this study about?
+}
+
+
+\frame{
+
+\frametitle{Sensitive Item Designs I}
+
+List experiments
 }
 
 \frame{
 
-\frametitle{Subtle Cue Experiments}
+\frametitle{Sensitive Item Designs II}
 
+Endorsement experiments
 }
+
+
+\frame{
+
+\frametitle{Sensitive Item Designs III}
+
+Subtle question wording
+
+poor versus poor blacks
+}
+
+
+
 
 \frame{
 
@@ -252,12 +351,112 @@ Use question wording designs to select which survey measures we want to use
 
 
 
+\subsection{Question Order Designs}
+\frame{\tableofcontents[currentsubsection]}
+
+\frame{
+
+\frametitle{Question Order Designs}
+
+\begin{itemize}
+\item Manipulation comes in the order or set of questions before the outcome measure
+\item<2-> Example:
+	\begin{itemize}
+	\item Goal: assess influence of value salience on support for a policy
+	\item Manipulate salience by asking different questions:
+		\begin{itemize}
+		\item Battery of 5 ``individual liberties'' questions, or
+		\item Battery of 5 ``life'' questions
+		\end{itemize}
+	\item Measure support for legalized abortion
+	\end{itemize}
+\item<3-> If answers to manipulated questions are important, can measure rest of battery post-outcome
+\end{itemize}
+
+}
+
+
+
+\subsection{Vignette Designs}
+\frame{\tableofcontents[currentsubsection]}
+
+\frame{
+
+\frametitle{Vignettes}
+
+\begin{itemize}
+\item A ``vignette'' is a short paragraph of text describing a situation
+\item Vignettes are probably the most common survey experimental paradigm, after question wording designs
+\item Take many forms and increasingly encompass non-textual stimuli
+\end{itemize}
+
+}
+
+\frame{
+
+\frametitle{A classic vignette}
+
+% welfare mother experiment
+
+\footnote{Sniderman and Carmines 1997}
+}
+
+
+% informational treatments
+
+
+\frame{
+
+\frametitle{Article-type vignettes}
+
+% articles
+
+}
+
+
+\frame{
+
+\frametitle{Video manipulations}
+
+% videos
+
+}
+
+
+% vignette
+% text
+% video
+
+
+
+
+
+
+\subsection{}
+
+\frame{
+
+\frametitle{Aside: Unique features of online studies}
+
+\begin{itemize}
+\item<2-> Capacity for audio-visual treatments and measurements
+\item<3-> Paradata collection
+	\begin{itemize}
+	\item Measure implicit outcomes
+	\end{itemize}
+\item<4-> Complex randomization (Thursday)
+\item<5-> Panel data (Friday)
+\item<5-> Synchronous, multi-person designs
+\end{itemize}
+
+}
+
+
+\questions
+
 \subsection{Assessing Treatments}
 \frame{\tableofcontents[currentsubsection]}
 
-
-% manipulation checks: Manipulation checks are a measurement of our manipulated variable
-% pretesting
 
 \frame{
 
@@ -330,43 +529,15 @@ Use question wording designs to select which survey measures we want to use
 }
 
 
-\subsection{Question Order Designs}
-\frame{\tableofcontents[currentsubsection]}
-
 \frame{
 
-\frametitle{Question Order Designs}
+\frametitle{An Aside: Demand Characteristics}
 
 \begin{itemize}
-\item Manipulation comes in the order or set of questions before the outcome measure
-\item<2-> Example:
-	\begin{itemize}
-	\item Goal: assess influence of value salience on support for a policy
-	\item Manipulate salience by asking different questions:
-		\begin{itemize}
-		\item Battery of 5 ``individual liberties'' questions, or
-		\item Battery of 5 ``life'' questions
-		\end{itemize}
-	\item Measure support for legalized abortion
-	\end{itemize}
-\item<3-> If answers to manipulated questions are important, can measure rest of battery post-outcome
+\item 
 \end{itemize}
 
 }
-
-
-
-\subsection{Vignette Designs}
-\frame{\tableofcontents[currentsubsection]}
-
-% vignette
-% text
-% video
-
-\subsection{Sensitive Item Designs}
-\frame{\tableofcontents[currentsubsection]}
-
-
 
 
 
@@ -388,7 +559,6 @@ Use question wording designs to select which survey measures we want to use
 	\begin{itemize}
 	\item Randomized treatment
 	\item Quasi-experimental treatment
-	\item Timing treatment
 	\end{itemize}
 \end{itemize}
 
@@ -399,8 +569,19 @@ Use question wording designs to select which survey measures we want to use
 
 \frametitle{Randomized Treatment}
 
-% compliance problems
-% non-response problems
+\begin{itemize}
+\item Examples:
+	\begin{enumerate}
+	\item<2-> Citizens randomly sent a letter by post encouraging them to reduce water usage
+	\item<3-> Different local media markets randomly assigned to receive different advertising
+	\end{enumerate}
+\item<4-> Survey is used to measure outcomes, when treatment assignment is already known
+\item<5-> Two big issues with these designs
+	\begin{itemize}
+	\item<6-> Compliance problems
+	\item<7-> Nonresponse problems
+	\end{itemize}
+\end{itemize}
 
 }
 
@@ -409,56 +590,45 @@ Use question wording designs to select which survey measures we want to use
 
 \frametitle{Quasi-Experimental Treatment}
 
-}
+\begin{itemize}
+\item Quasi-Experiments are situations where randomization-like forces influence the values of independent variables
+	\begin{itemize}
+	\item Often these are ``natural'' experiments where boundaries, discontinuities, or interruptions disrupt treatment-assignment
+	\end{itemize}
+\item Survey is simply a measurement instrument
+\item Examples:
+	\begin{itemize}
+	\item<2-> Respondents are randomly assigned to be interviewed before or after an event
+	\item<3-> Respondents interviewed before \textit{and} after an event, with within-subjects comparisons
+	\end{itemize}
+\end{itemize}
 
+}
 
 \frame{
 
-\frametitle{Timing Treatment}
+\frametitle{Albertson and Lawrence}
+
+What's this study about? What is their quasi-experimental design?
 
 }
-
-
 
 
 
 \frame{
 
 	\frametitle{Threats to Validity}
+	
+	As soon as treatment is not truly random, we have to worry about threats to validity.\footnote{Shadish, Cook, and Campbell (2002)}
+	
 	\begin{enumerate}
-	\item History
-	\item Maturation
-	\item Testing
-	\item Instrumentation
-	\item Instability
-	\item Regression to the mean
+	\item<2-> History (simultaneous cause)
+	\item<3-> Maturation (time trends)
+	\item<4-> Testing (observation changes respondents)
+	\item<5-> Instrumentation (changing operationalization)
+	\item<6-> Instability (measurement error)
+	\item<7-> Attrition
 	\end{enumerate}
-}
-% history: stimultaneous alterntive cause
-% maturation: time trends
-% testing: measurement changes behavior
-% instrumentation: operationalization changes over time
-% instability: measurement error
-% regression (to the mean):
-% - statistically: extreme cases will be less extreme on second measurement
-% - in policy terms: interventions are most likely when problems are extreme
-
-% one more not mentioned by Campbell and Ross: If the series is an aggregation, it's also possibly due to attrition or changing composition of the sample from which the data is aggregated
-
-\frame{
-	\frametitle{Difference-In-Differences}
-	\small
-	\begin{itemize}\itemsep0.5em
-		\item How do we know change in $Y$ wasn't due to something else?
-			\begin{itemize}
-				\item How do we know $Y_{0,t}$ is a good stand-in for $Y_{0,t+1}$?
-			\end{itemize}
-		\item<2-> Use a comparison case (or cases)!
-		\item<3-> Instead of using the pre-post difference in $Y_i$ to estimate the causal effect, use the difference in pre-post differences for two units $i$ and $j$:
-		\begin{align*}
-		(Y_{i,t+1} - Y_{i,t}) - (Y_{j,t+1} - Y_{j,t})
-		\end{align*}
-	\end{itemize}
 }
 
 
@@ -511,29 +681,6 @@ Use question wording designs to select which survey measures we want to use
 
 
 \frame{
-	\frametitle{What is a Quasi-Experiment?}
-	\small
-	\begin{itemize}\itemsep0.5em
-		\item Quasi-Experiments are situations where randomization-like forces influence the values of independent variables
-		\item Most of the time, these are ``natural'' experiments where boundaries, discontinuities, or interruptions disrupt a continuous treatment-assignment process
-		\item Analyzing a quasi-experiment involves searching for an ``instrument variable''
-	\end{itemize}
-}
-
-
-\frame{
-	\frametitle{What is ``instrumental''?}
-	\begin{enumerate}\itemsep0.5em
-		\item \alert<2>{serving as a crucial means, agent, or tool}
-		\item of, relating to, or done with an instrument or tool
-		\item relating to, composed for, or performed on a musical instrument
-		\item of, relating to, or being a grammatical case or form expressing means or agency
-	\end{enumerate}
-}
-
-
-
-\frame{
 	\frametitle{What is ``instrumental''?}
 	\begin{itemize}\itemsep1em
 		\item $W$ must be a crucial cause of $X$'s effect on $Y$
@@ -561,7 +708,6 @@ Use question wording designs to select which survey measures we want to use
 			\end{itemize}
 	\end{enumerate}
 }
-
 
 
 \frame{
@@ -626,26 +772,21 @@ Use question wording designs to select which survey measures we want to use
 }
 
 
-
-
 \frame{
-	\frametitle{Finding Instruments}
+	\frametitle{Difference-In-Differences}
+	\small
 	\begin{itemize}\itemsep0.5em
-		\item Forward, not backward, causal inference
-		\item Most instruments are not things we care about
+		\item How do we know change in $Y$ wasn't due to something else?
 			\begin{itemize}
-				\item Weather, disasters
-				\item Geography, borders, climate
-				\item Lotteries
+				\item How do we know $Y_{0,t}$ is a good stand-in for $Y_{0,t+1}$?
 			\end{itemize}
-		\item A good instrument is one that satisfies both of our conditions, so we need:
-			\begin{itemize}
-				\item A good story about exogeneity
-				\item Evidence that instrument is \textit{strong}
-			\end{itemize}
+		\item<2-> Use a comparison case (or cases)!
+		\item<3-> Instead of using the pre-post difference in $Y_i$ to estimate the causal effect, use the difference in pre-post differences for two units $i$ and $j$:
+		\begin{align*}
+		(Y_{i,t+1} - Y_{i,t}) - (Y_{j,t+1} - Y_{j,t})
+		\end{align*}
 	\end{itemize}
 }
-
 
 
 
@@ -655,7 +796,16 @@ Use question wording designs to select which survey measures we want to use
 \frametitle{Homework!}
 
 \begin{itemize}
-\item 
+\item Working alone or with a partner, start thinking about a possible experiment
+\item Start writing a protocol:
+	\begin{enumerate}
+	\item Theory/hypotheses
+	\item Instrumentation
+	\item Sampling
+	\item Implementation
+	\item Analysis
+	\end{enumerate}
+\item Time on Friday to share and get feedback
 \end{itemize}
 
 }
