--- a/Slides/lecture05.tex
+++ b/Slides/lecture05.tex
@@ -130,6 +130,11 @@ $LATE = \frac{ITT}{Pct. Compliant}$
 
 }
 
+% repeated measures of outcomes (effect duration)
+
+% repeated treatments (Druckman and Leeper 2012)
+
+
 
 \frame{
 
